--- a/themes/next/source/css/_common/components/footer/footer.styl
+++ b/themes/next/source/css/_common/components/footer/footer.styl
@@ -5,7 +5,7 @@
   img { border: none; }
 }
 
-.footer-inner { text-align: center !important; }
+.footer-inner { text-align: center; }
 
 .with-love {
   display: inline-block;
